examples/errors/go_execution_context_panic_observe.mgo
package main

import "time"

func fail() {
	time.Sleep(time.Second)
	panic("worker failed")
}

func main() {
	go fail()

	// main 返回后，尚未完成的子执行上下文会被停止，因此这里不会观察到 panic。
	time.Sleep(500 * time.Millisecond)
}
